updated the overall files

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nextn",
-  "version": "2.1.6",
+  "version": "2.1.7",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack -p 9002 -H 0.0.0.0",
@@ -46,7 +46,7 @@
     "genkit": "^1.14.1",
     "googleapis": "^140.0.1",
     "lucide-react": "^0.475.0",
-    "next": "15.3.8",
+    "next": "^15.5.9",
     "next-themes": "^0.3.0",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
