linked the ZOHO invoices and payment link listing and creation, also changed the analytics to show the data particularly for analysis purposes alone and done some cleanups

--- a/.env
+++ b/.env
@@ -46,3 +46,18 @@ CENTRAL_API_BASE_URL=http://localhost:3005
 # JWT Authentication
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 API_SECRET=your-super-secret-jwt-key-change-this-in-production
+
+
+# Zoho Books Configuration
+ZOHO_ORGANIZATION_ID=60043384973
+ZOHO_CLIENT_ID=1000.0RCC5HFTKXSHWVO6BIOZYT0VHAVRVW
+ZOHO_CLIENT_SECRET=f14106495fa732fc45d663df6d974658e1226707a4
+ZOHO_REFRESH_TOKEN=1000.b843737e929ab7924e47e65ff2c1b115.665ceed0428b945dff9306b22dc0a48c
+
+# ZOHO Payments Configuration
+ZOHO_PAYMENTS_ACCOUNT_ID=60044346402
+ZOHO_PAYMENTS_CLIENT_ID=1005.M6WDH98PSUW3YUIZ5FAHORX5M4IK9V
+ZOHO_PAYMENTS_CLIENT_SECRET=32e0a42d9bff71171f712673fa58bb1dd9ff88419f
+ZOHO_PAYMENTS_REFRESH_TOKEN=1005.da01220e0223dc71608dce06469a3222.301d04a9c7f8c844492a05f3e343999c
+ZOHO_DATA_CENTER=in
+ZOHO_DEBUG=true
